# Dynasty-Football-Model

./: .env.example  .gitignore  PUBLISH_TO_INTERNET.txt  README.md  READ_ME_FIRST.txt  RUN_ME_MAC.command  RUN_ME_WINDOWS.bat  leagues.json  pyproject.toml  requirements.txt
data/: pfr_birth_dates.csv  retired_early_comps.yaml
docs/: CAREER-LENGTH-CALIBRATION.md  CHANGELOG-model.md  CONFIDENCE-SHRINKAGE.md  CONSENSUS-VS-MODEL.md  CUMULATIVE-ARC.md  ELITE-PROVEN-CALIBRATION.md  LATE-BREAKOUT-QBs.md  RESEARCH-sources.md  ROOKIE-NFL-FP-ARC.md  ROOKIE-SIMILARITY-FB.md  SIMILARITY-METHODOLOGY.md  STYLE-COHORTS.md  SURVIVAL-PENALTY.md  V1-METHODOLOGY.md  V2-METHODOLOGY.md  V2.3.5-AGE-COMP-FIX.md  V2.3.5-VALIDATION.md  V2.4-ERA-PACE-DELTA.md  V2.4-PENALTY-RETUNE.md  V2.4-PR4-GO-LIVE.md  V2.4-PRE1999-LEGENDS.md  V2.4-VALIDATION.md  V3.0-BACKTEST.md  V3.0-CONFERENCE-TIER-MAPPING.md  V3.0-PROSPECTS-TAB.md  V3.1-VETERAN-RECALIBRATION.md  V3.2-CORPUS-EXPANSION.md  VORP-METHODOLOGY.md
scripts/: backtest_v3_engine.py  build_cfb_sos_corpus.py  build_players_pre1999_sidecar.py  build_pre1999_birth_dates.py  build_pre1999_corpus.py  build_pre2014_cfb_corpus.py  build_prospect_engine.py  build_prospects_v3.py  build_ras_csv.py  correlation_audit.py  prefetch_leagues.py  refresh_ktc_consensus.py  refresh_nflverse_corpus.py  refresh_pfr_draft_classes.py  refresh_tankathon_big_board.py  v24_pr3_validation.py  v2_3_5_snapshot_capture.py  v2_3_5_snapshot_run.sh
tests/: conftest.py  smoke_test.py  test_cfbd_breakouts.py  test_consensus.py  test_cumulative_career_arc.py  test_current_age.py  (+44 more)
(+146 files in other folders)
