[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasty-model"
version = "0.17.0"
description = "Dynasty fantasy football composite ranking model"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "typer>=0.12",
    "rich>=13.0",
    "scipy>=1.11",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
